--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="icon" href="static/thumbnail.jpeg" type="image/jpeg">
+    <link rel="icon" href="static/thumbnail.png" type="image/jpeg">
     <title>CLIP Search Engine</title>
     <style>
         .frame {
