--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,17 @@
 <head>
     <title>CLIP Lens</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="icon" href="static/thumbnail.png" type="image/jpeg">
     <style>
         .preview-image {
             max-width: 200px;
             max-height: 200px;
             margin-top: 10px;
+        }
+        .search-btn {
+            width: 100px;
+            height: 38px;
+            margin-top: 31px;
         }
         .result-image {
             width: 100%;
@@ -23,96 +29,130 @@
 </head>
 <body>
     <div class="container my-5">
-        <h1 class="mb-4">CLIP Lens</h1>
-
+        <div style="display:flex; align-items: center; flex-direction: column; margin-bottom: 30px;">
+            <img src="/static/logo.png" style="height: 200px; padding: 8px" />
+            <h1 class="mb-4">CLIP Lens</h1>
+        </div>
         <nav>
-            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <button class="nav-link" id="nav-knn-tab" data-bs-toggle="tab" data-bs-target="#nav-knn" type="button" role="tab" aria-controls="nav-knn" aria-selected="true">KNN Search</button>
-                <button class="nav-link" id="nav-clip-tab" data-bs-toggle="tab" data-bs-target="#nav-clip" type="button" role="tab" aria-controls="nav-clip" aria-selected="false">CLIP Similarity</button>
-                <button class="nav-link" id="nav-text-index-tab" data-bs-toggle="tab" data-bs-target="#nav-text-index" type="button" role="tab" aria-controls="nav-text-index" aria-selected="false">Text Indexing</button>
+            <div class="nav nav-pills justify-content-center" id="nav-main">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Index Search</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/similarity">Compare Images</a>
+                  </li>
+                <!-- <button class="nav-link active" href="#" id="nav-index" type="button">Index Search</button>
+                <button class="nav-link" href="similarity" id="nav-compare" type="button">Compare Images</button> -->
             </div>
         </nav>
 
-        <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade" id="nav-knn" role="tabpanel" aria-labelledby="nav-knn-tab">
-                <h2 class="mt-3">KNN Search</h2>
-                <form action="{{ url_for('knn_search') }}" method="post" enctype="multipart/form-data" class="mb-3" id="knn-form">
-                    <div class="mb-3">
-                        <label for="image" class="form-label">Upload an image</label>
-                        <input type="file" class="form-control" id="image" name="image" accept="image/*" required>
-                        <img id="image-preview" class="preview-image" src="" alt="Image preview" style="display:none;">
-                    </div>
-                    <div class="mb-3">
-                        <label for="K" class="form-label">Number of results</label>
-                        <input type="number" class="form-control" id="K" name="K" value="5" min="1" max="20" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Search</button>
-                </form>
-                {% if tab == 'knn' %}
-                    <h3 class="mt-4">Query Image:</h3>
-                    <div class="card mb-4">
-                        <img src="{{ query_img_path }}" alt="Query Image" class="result-image">
-                    </div>
-                    <h3>Results:</h3>
-                    <div class="row">
-                    {% for path, score in paths_and_scores %}
-                        <div class="col-md-6 col-lg-4">
-                            <div class="card result-card">
-                                <img src="{{ path }}" class="result-image" alt="Result image">
-                                <div class="card-body">
-                                    <p class="card-text">Similarity: {{ score }}</p>
-                                </div>
-                            </div>
-                        </div>
+        <form action="{{ url_for('set_index_folder') }}" method="post" id="index-folder-form" class="mb-4">
+            <div class="mb-3">
+                <label for="index_folder" class="form-label">Select Index Folder</label>
+                <select class="form-select" id="index_folder" name="index_folder" required>
+                    <option value="" {% if not selected_index %}selected{% endif %} disabled>Choose an index folder</option>
+                    {% for folder in index_folders %}
+                        <option value="{{ folder }}" {% if selected_index == folder %}selected{% endif %}>{{ folder }}</option>
                     {% endfor %}
-                {% endif %}
+                </select>
             </div>
-            <div class="tab-pane fade" id="nav-clip" role="tabpanel" aria-labelledby="nav-clip-tab">
-                <h2 class="mt-3">CLIP Similarity</h2>
-                <form action="{{ url_for('clip_similarity') }}" method="post" enctype="multipart/form-data" class="mb-3" id="clip-form">
-                    <div class="mb-3">
-                        <label for="image1" class="form-label">Upload Image 1</label>
-                        <input type="file" class="form-control" id="image1" name="image1" accept="image/*" required>
-                        <img id="image1-preview" class="preview-image" src="" alt="Image 1 preview" style="display:none;">
-                    </div>
-                    <div class="mb-3">
-                        <label for="image2" class="form-label">Upload Image 2</label>
-                        <input type="file" class="form-control" id="image2" name="image2" accept="image/*" required>
-                        <img id="image2-preview" class="preview-image" src="" alt="Image 2 preview" style="display:none;">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Compare</button>
-                </form>
-                {% if tab == 'clip' %}
-                    <h3 class="mt-4">Comparison Results:</h3>
-                    <p>Cosine similarity: {{ similarity }}</p>
-                {% endif %}
-            </div>
-            <div class="tab-pane fade" id="nav-text-index" role="tabpanel" aria-labelledby="nav-text-index-tab">
-                <h2 class="mt-3">Text Indexing</h2>
-                <form action="{{ url_for('text_index') }}" method="post" class="mb-3" id="text-index-form">
-                    <div class="mb-3">
-                        <label for="text" class="form-label">Enter a text prompt</label>
-                        <input type="text" class="form-control" id="text" name="text" required minlength="3">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Index</button>
-                </form>
-                {% if tab == 'text_index' %}
-                    {% for path, score in paths_and_scores %}
-                        <div class="col-md-6 col-lg-4">
-                            <div class="card result-card">
-                                <img src="{{ path }}" class="result-image" alt="Result image">
-                                <div class="card-body">
-                                    <p class="card-text">Similarity: {{ score }}</p>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            </div>
-        </div>
+            <button type="submit" class="btn btn-primary">Set Index Folder</button>
+        </form>
 
-        <a href="{{ url_for('clear') }}" class="btn btn-danger mt-3">Clear Temporary Files</a>
-    </div>
+        {% if selected_index %}
+
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <button class="nav-link" id="nav-knn-tab" data-bs-toggle="tab" data-bs-target="#nav-knn" type="button" role="tab" aria-controls="nav-knn" aria-selected="true">KNN Search</button>
+                    <button class="nav-link" id="nav-clip-tab" data-bs-toggle="tab" data-bs-target="#nav-clip" type="button" role="tab" aria-controls="nav-clip" aria-selected="false">CLIP Similarity</button>
+                    <button class="nav-link" id="nav-text-index-tab" data-bs-toggle="tab" data-bs-target="#nav-text-index" type="button" role="tab" aria-controls="nav-text-index" aria-selected="false">Text Indexing</button>
+                </div>
+            </nav>
+
+            <div class="tab-content" id="nav-tabContent">
+                <a href="{{ url_for('clear') }}" class="btn btn-danger mt-3">Clear Temporary Files</a>
+                <div class="tab-pane fade" id="nav-knn" role="tabpanel" aria-labelledby="nav-knn-tab">
+                    <h2 class="mt-3">Image KNN Search</h2>
+                        <form action="{{ url_for('knn_search') }}" method="post" enctype="multipart/form-data" class="mb-3" id="knn-form">
+                            <div class="row">
+                                <div class="col-md-4 mb-3">
+                                    <label for="image" class="form-label">Upload an image</label>
+                                    <div class="row">
+                                        <input type="file" class="col-sm-4 mb-6 form-control" id="image" name="image" accept="image/*" required>
+                                        <img id="image-preview" class="col-sm-8 preview-image" src="" alt="Image preview" style="display:none;">
+                                    </div>
+                                </div>
+                                <div class="col-md-1 mb-3">
+                                    <label for="K" class="form-label">K</label>
+                                    <input type="number" class="form-control" id="K" name="K" value="5" min="1" max="20" required>
+                                </div>
+                                <button class="col-md-1 mb-3 search-btn btn btn-primary" type="submit" class="">Search</button>
+                            </div>
+                        </form>
+                </div>
+                <div class="tab-pane fade" id="nav-clip" role="tabpanel" aria-labelledby="nav-clip-tab">
+                    <h2 class="mt-3">CLIP Similarity</h2>
+                    <form action="{{ url_for('clip_similarity') }}" method="post" enctype="multipart/form-data" class="mb-3" id="clip-form">
+                        <div class="row">
+                            <div class="col-sm-4 mb-3">
+                                <label for="image1" class="form-label mb-3">Upload Reference Image</label>
+                                <input type="file" class="form-control" id="image1" name="image1" accept="image/*" required>
+                                <img id="image1-preview" class="preview-image" style="width:300px" src="" alt="Image 1 preview" style="display:none;">
+                            </div>
+                            <div class="col-sm-4 mb-3">
+                                <label for="image2" class="form-label mb-3">Upload Comparison Image</label>
+                                <input type="file" class="form-control" id="image2" name="image2" accept="image/*" required>
+                                <img id="image2-preview" class="preview-image" style="width:300px" src="" alt="Image 2 preview" style="display:none;">
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Compare</button>
+                    </form>
+
+                    {% if tab == 'clip' %}
+                        <h3 class="mt-4">Comparison Results:</h3>
+                        <h4>Cosine similarity: {{ similarity }}</h4>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-4">
+                                <div class="card result-card">
+                                    <img src="{{ query_image_path }}" class="result-image" alt="Result image">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-4">
+                                <div class="card result-card">
+                                    <img src="{{ comparison_image_path }}" class="result-image" alt="Result image">
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
+                </div>
+                <div class="tab-pane fade" id="nav-text-index" role="tabpanel" aria-labelledby="nav-text-index-tab">
+                    <h2 class="mt-3">Text KNN Search</h2>
+                    <form action="{{ url_for('text_index') }}" method="post" class="mb-3" id="text-index-form">
+                        <div class="row">
+                            <div class="col-md-4 mb-3">
+                                <label for="text" class="form-label">Enter a text prompt</label>
+                                <div class="row">
+                                    <input type="text" class="form-control" id="text" name="text" required minlength="3">
+                                </div>
+                            </div>
+                            <div class="col-md-1 mb-3">
+                                <label for="K" class="form-label">K</label>
+                                <input type="number" class="form-control" id="K" name="K" value="5" min="1" max="20" required>
+                            </div>
+                            <button class="col-md-1 mb-3 search-btn btn btn-primary" type="submit" class="">Search</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <a href="{{ url_for('clear') }}" class="btn btn-danger mt-3">Clear Temporary Files</a>
+        </div>
+    {% else %}
+        <div class="alert alert-info" role="alert">
+            Please select an index folder to start using the application.
+        </div>
+    {% endif %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
